# named

./: .travis.yml  Cargo.toml  LICENSE  README.md
named/: Cargo.toml
named/src/: arg_reconciler.rs  attr_parser.rs  lib.rs
tests/: Cargo.toml
tests/compile_fail/: caller_wrong_name_at_end.rs  caller_wrong_name_at_end.stderr  caller_wrong_name_at_start.rs  caller_wrong_name_at_start.stderr  caller_wrong_name_in_middle.rs  caller_wrong_name_in_middle.stderr  caller_wrong_names_at_end.rs  caller_wrong_names_at_end.stderr  definer_wrong_name.rs  definer_wrong_name.stderr  first_required.rs  first_required.stderr  second_of_three_required.rs  second_of_three_required.stderr  second_of_two_required.rs  second_of_two_required.stderr  takes_borrowed_self.rs  takes_borrowed_self.stderr  takes_mutably_borrowed_self.rs  takes_mutably_borrowed_self.stderr  takes_mutably_owned_self.rs  takes_mutably_owned_self.stderr  takes_owned_self.rs  takes_owned_self.stderr  three_required.rs  three_required.stderr  three_required_second_given.rs  three_required_second_given.stderr  three_required_third_given.rs  three_required_third_given.stderr  unknown_attr_arg.rs  unknown_attr_arg.stderr  unknown_attr_args.rs  unknown_attr_args.stderr
tests/pass/: complex_const_default.rs  definer_wrong_name_order.rs  no_args.rs  simple2.rs  simple3.rs  simple_const_default.rs  some_required.rs
tests/src/: lib.rs
