[package]
name = "named"
version = "0.1.0"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
description = "Procedural macro which allows you to produce functions which can be called with named arguments, optionally with default values."
edition = "2018"
repository = "https://github.com/illicitonion/named"
readme = "README.md"
keywords = ["named", "arguments", "function", "default"]
categories = ["rust-patterns"]
license = "BSD-3-Clause"

[badges]
travis-ci = { repository = "illicitonion/named", branch = "master" }
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
indexmap = "1.5.1"
proc-macro2 = "1.0.19"
quote = "1.0.7"
syn = { version = "1.0.38", features = ["extra-traits", "full"] }
